; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_string.c__zip_string_write.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_string.c__zip_string_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_string = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_zip_string_write(%struct.zip_string* %0, i32* %1) #0 {
  %3 = alloca %struct.zip_string*, align 8
  %4 = alloca i32*, align 8
  store %struct.zip_string* %0, %struct.zip_string** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.zip_string*, %struct.zip_string** %3, align 8
  %6 = icmp eq %struct.zip_string* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %17

8:                                                ; preds = %2
  %9 = load %struct.zip_string*, %struct.zip_string** %3, align 8
  %10 = getelementptr inbounds %struct.zip_string, %struct.zip_string* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.zip_string*, %struct.zip_string** %3, align 8
  %13 = getelementptr inbounds %struct.zip_string, %struct.zip_string* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @fwrite(i32 %11, i32 %14, i32 1, i32* %15)
  br label %17

17:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @fwrite(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
